# viet-tts

./: README.md  README_VN.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  python-package.yml
viettts/: cli.py  server.py
