[tool.poetry.dependencies]
python = "^3.10"
conformer = "0.3.2"
diffusers = "0.27.2"
gradio = "4.32.2"
hydra-core = "1.3.2"
hyperpyyaml = "1.2.2"
librosa = "0.10.2"
omegaconf = "2.3.0"
onnx = "1.17.0"
onnxruntime-gpu = "1.17.0"
protobuf = "4.25.0"
pydantic = "2.7.0"
soundfile = "0.12.1"
torch = ">=2.2.0"            # Đổi từ "2.0.1" sang ">=2.2.0" để Colab cài được
torchaudio = ">=2.0.2"       # Đổi từ "2.0.2" sang ">=2.0.2" để Colab cài được
uvicorn = "0.30.0"
wget = "3.2"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
loguru = "0.7.2"
vinorm = "^2.0.7"
huggingface-hub = "0.24.7"
click = ">=8.1.7,<9.0.0"      # Đảm bảo nằm trong khoảng version Colab có sẵn
gunicorn = ">=23.0.0,<24.0.0" # Đảm bảo tránh các version quá mới gây lỗi
silero-vad = "^5.1.2"
tiktoken = "^0.8.0"
openai-whisper = "^20240930"
